--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -3,18 +3,18 @@
 \section{Introduction}
 \label{sec:introduction}
 
-This thesis falls in the realm of formal verification, i.e. the attempt to verify a system by the use of \textit{formal methods} such as SAT solvers, interactive theorem provers and model checkers.
-With these tools, formal verification engineers strive to prove the correctness of \textit{systems} such as general computer programs, \glspl{os}, compilers or hardware designs.
+This thesis falls in the realm of formal verification, i.e. the attempt to verify a system by the use of formal methods such as SAT solvers, interactive theorem provers and model checkers.
+With these tools, formal verification engineers strive to prove the correctness of systems such as general computer programs, \glspl{os}, compilers or hardware designs.
 Often times, for a system to be correct means that it complies with a specification.
 Formal verification of a system then is the attempt to prove that some system is free of errors, i.e. meets all properties imposed by some specification.
-Whereas one might think that \enquote{specification} here references to large documents specifying standards of the industry, it might also refer to more abstract properties like the absence of memory leaks or race conditions in parallel programming.
+\enquote{Specification} here might reference to large documents specifying standards of the industry, but it might also refer to more abstract properties like the absence of memory leaks or race conditions in parallel programming.
 Thus, formal verification complements testing.
 The relation between these two approaches often is illustrated by a famous quote of Edsger Dijkstra:
 \begin{displaycquote}[p.6]{Dijkstra72}
     Program testing can be used to show the presence of bugs, but never to show their absence!
 \end{displaycquote}
 
-Whereas testing is a quick and efficient way of finding bugs in the development process of some system, formal verification is a more complex but complete process of proving the absence of bugs.
+Whereas testing is a quick and efficient way of finding bugs in the development process of a system, formal verification is a more complex but complete (in regard to the properties verified) process of proving the absence of bugs.
 
 In \citetitle{Reid17} \cite{Reid17}, \citeauthor{Reid17} stressed the need of verifying specifications themselves as opposed to simply verifying implementations against specifications.
 To tackle this, he proposed to verify specifications against higher level properties and used this methodology to verify the specification of the ARM M-Class specification.
@@ -23,8 +23,8 @@ In this thesis, two lines of his research will be continued: \begin{enumerate*}[
     \item this methodology will be applied to an \gls{isa} specification as well.
 \end{enumerate*}
 
-The higher level properties an \gls{isa} will be verified against mainly stem from the work of \citeauthor{Ferraiuolo17} in \citetitle{Ferraiuolo17} \cite{Ferraiuolo17}.
-As the title indicates, their work also falls into the domain of verification; the authors propose a new way of verifying \gls{hdl} implementations of \glspl{isa}.
+The higher level properties an \gls{isa} will be verified against, mainly stem from the work of \citeauthor{Ferraiuolo17} in \citetitle{Ferraiuolo17} \cite{Ferraiuolo17}.
+As the title indicates, their work also falls into the domain of verification; the authors propose a new way of verifying \gls{hdl} implementations.
 The core idea here is to use a a type system in which types serve as security annotation of information.
 By applying typing rules to expressions in the \gls{hdl} code, new labels are generated and thus information is tracked through the code.
 Certain type conversions are, however, prohibited and mark a security vulnerability.
@@ -32,8 +32,6 @@ Thus, their approach can be summarized as tracking and controlling information f
 The authors evaluate their approach by applying it to the implementation of the ARM TrustZone extension.
 In this thesis, the idea of tracking and controlling information flow as proposed in \cite{Ferraiuolo17} will be lifted to the level of the \gls{isa} specification thus following the line of research as proposed in \cite{Reid17}.
 
-In this thesis, we propose a new approach to verifying specifications against higher level properties using information flow control.
-Thus, the work of \citeauthor{Reid17} \cite{Reid17} and \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} is combined.
 We claim that this approach is
 \begin{itemize}
     \item viable, i.e. the hardware requirements are low and the work can be reproduced with limited time investment,
@@ -41,8 +39,8 @@ We claim that this approach is
     \item supplemental, i.e. it enhances on related work such as \cite{Reid17}.
 \end{itemize}
 
-This new approach will be applied to the RISC-V architecture using the formal verification tool nuXmv.
-RISC-V is a modern and open-source \gls{isa} that has first been published in 2011 \citeauthor{RiscVISA-org}.
+This new approach will be applied to the RISC-V architecture using the model checker nuXmv.
+RISC-V is a modern and open-source \gls{isa} that has first been published in 2011 \cite{RiscVISA-org}.
 A basic architecture that orientates itself by the RISC-V architecture will be modelled in nuXmv.
 nuXmv is a general purpose model checker that supports different specification languages and verification algorithms.
 Using nuXmv allows for enhancing on the approach proposed by \citeauthor{Reid17} in a key aspect:
@@ -57,9 +55,9 @@ At the end of this section, the methodology of this thesis will be discussed in 
 In section \ref{sec:arch}, the RISC-V architecture and a new, minimal, RISC-V-inspired architecture called MINRV8 will be introduced.
 Following up on this, it will be described how the MINRV8 architecture was implemented in nuXmv.
 
-Section \ref{sec:ifc} details what an information flow tracking means for an \gls{isa}, how specifically it can be applied to the MINRV8 and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa}.
+Section \ref{sec:ifc} details what an information flow tracking means for an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa}.
 
-Section \ref{sec:checking} then defines the higher level properties that implement the information flow control on the MINRV8 architecture.
+Section \ref{sec:checking} then defines the higher level properties that implement information flow control for the MINRV8 architecture.
 Furthermore it will be discussed, how nuXmv was used to verify these properties.
 
 The evaluation of our approach is given in section \ref{sec:results}-\ref{sec:conclusion}.
