--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -114,6 +114,14 @@
 \newacronym{ucause}{ucause}{user cause}
 \newacronym{utval}{utval}{user trap value}
 
+\newacronym{xip}{$x$ip}{interrupt pending}
+\newacronym{xie}{$x$ie}{interrupt enable}
+\newacronym{xstatus}{$x$status}{status}
+\newacronym{xtvec}{$x$tvec}{trap-vector base-address}
+\newacronym{xepc}{$x$epc}{exception program counter}
+\newacronym{xcause}{$x$cause}{exception cause}
+\newacronym{xtval}{$x$tval}{trap value}
+
 \newacronym{pmpcfg}{pmpcfg}{phsyical memory protection configuration}
 \newacronym{pmpaddr}{pmpaddr}{phsyical memory protection address}
 \newacronym{pmacfg}{pmacfg}{phsyical memory attributes configuration}
