thesis: Improve flow of text in information flow tracking section

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -81,6 +81,7 @@ This thesis attempts to fill this gap and proposes a new way of verifying archit
 The work in this thesis therefore also is subject to the same requirements that have been imposed on the high-level properties in \cite{Reid17}.
 
 \subsection{Information Flow Control}
+\label{sec:bg-ifc}
 
 In \citetitle{Ferraiuolo17} \cite{Ferraiuolo17} by \citeauthor{Ferraiuolo17} the authors formally verify an implementation of the ARM TrustZone architecture by statically type-checking an information flow policy.
 To achieve this, they enhance on the already existing \gls{hdl} language SecVerilog, extending its type system to allow more fine grained modelling of information flow policies.
