thesis: Fix missing year in @online reference

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -597,6 +597,7 @@
 
 @Online{pyexpander,
     title = {pyexpander documentation},
+    year = {2017},
     organization = {Helmholtz-Zentrum Berlin GmbH},
     url = {http://pyexpander.sourceforge.net/},
     urldate = {2019-12-18},
