--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -3,17 +3,15 @@
 \section{Background}
 \label{sec:background}
 
-In the introduction, the core motivation of this thesis was given.
+In the introduction, the core motivation of this thesis was given which is to formally verify \glspl{isa} by model checking information flow control policies.
 However, the methodology of this thesis has not been made clear.
 At this point, it is not tractable to introduce this in detail.
 Instead, the background of this thesis will be set up first.
 
-The first two sections \ref{sec:verify-spec} and \ref{sec:ifc} will introduce the foundational work of \citeauthor{Reid17} \cite{Reid17} and \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17}
-Recall that this thesis is about formally verifying instruction set architectures by model checking information flow control policies.
-
+The first two sections \ref{sec:verify-spec} and \ref{sec:ifc} will introduce the foundational work of \citeauthor{Reid17} \cite{Reid17} and \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17}.
 Following up on this, the actual subject of verification, \glspl{isa}, and the technical details of the verification process will be outlined.
 There will be not only an introduction to common \glspl{isa}, especially RISC-V, (section \ref{sec:riscs}) but also to the ecosystem of processors which allows to set up a threat-model (section \ref{sec:ecosystem}).
-Then, a general explanation of what model checking is will be given, concluding with the description of the nuXmv model checker that will be used as part of this thesis (section \ref{sec:model-checking}).
+Then, a general explanation of what model checking is will be given, concluding with the description of the nuXmv model checker that will be used in this thesis (section \ref{sec:model-checking}).
 
 In each of these subsections , a collection of \glspl{isa} or model checkers respectively will be touched to \begin{enumerate*}[label=\alph*)]
     \item give a better feel for the field as a whole and
@@ -73,7 +71,7 @@ In summary, the aspects of \cite{Reid17} that are relevant for this thesis are:
     \item the paper proposes requirements for properties to verify an \gls{isa} against.
 \end{enumerate}
 
-Additionally, the paper successfully implements this approach by partially verifying the ARM M-Class architecture.
+Additionally, the paper successfully implements its approach by partially verifying the ARM M-Class architecture.
 A downside of this work, however, is that it is limited to verifying single processor transactions only.
 This lies in the nature of the properties taken from the natural language specification which only constrain single transitions of the processor.
 
@@ -83,13 +81,13 @@ The work in this thesis therefore also is subject to the same requirements that 
 \subsection{Information Flow Control}
 \label{sec:bg-ifc}
 
-In \citetitle{Ferraiuolo17} \cite{Ferraiuolo17} by \citeauthor{Ferraiuolo17} the authors formally verify an implementation of the ARM TrustZone architecture by statically type-checking an information flow policy.
+In \citetitle{Ferraiuolo17} \cite{Ferraiuolo17} by \citeauthor{Ferraiuolo17} the authors verify an implementation of the ARM TrustZone architecture by statically type-checking an information flow policy.
 To achieve this, they enhance on the already existing \gls{hdl} language SecVerilog, extending its type system to allow more fine grained modelling of information flow policies.
 Therefore, the authors verify an implementation against higher level properties as opposed verifying a specification as done by \citeauthor{Reid17} in \cite{Reid17}.
-This thesis takes this general approach and lifts it to be applied to specifications rather than implementations.
+This thesis takes this general approach and lifts it to be applied to specifications rather than \glspl{hdl}.
 
 \glspl{hdl} are very much like other, ordinary programming languages only that they are used to specify electronic circuits.
-This use case introduces several novelties to \glspl{hdl} in contrast to normal programming languages, e.g. type systems are not as rich and usually comprise registers (multiple bits) and wires (one bit).
+This use case introduces several novelties to \glspl{hdl} in contrast to normal programming languages, e.g. type systems are not as rich and usually comprise registers (multiple bits) and wires (one bit). i.e. they resemble much more low level systems.
 In context of this thesis, think of an \gls{hdl} as a programming language with a very specific use case.
 
 \citeauthor{Ferraiuolo17} define an \textit{information flow policy} as a lattice of security labels $ (M, \sqcup, \sqcap) $; with $ \sqsubseteq $ being the partial order on $ M $ as induced by the lattice.
@@ -99,9 +97,9 @@ Intuitively speaking, information labelled with $ a \in M $ is allowed to flow t
     To verify an ARM TrustZone implementation, \citeauthor{Ferraiuolo17} introduce four information flow labels $ \Sigma = \{ \PT, \PU, \CT, \CU \} $ which stand for public/trusted, public/untrusted, confidential/trusted and confidential/untrusted.
     These labels form the information flow policy lattice $ (\Sigma, \sqcup, \sqcap) $ which is depicted in figure \ref{fig:sec-lattice} as a hasse diagram.
     As you can see, each of these four labels comprises two tokens from two domains of information flow control.
-    The first of these domains is the one of \textit{confidentiality} - each label states that a piece of information is either public (\P{}) or confidential (\C{}).
-    The second of these domains is the one of \textit{integrity}, i.e. are the values we deal with integrous or in other words not malicious?
-    Each label states that a piece of information is either trusted (\T{}) or untrusted (\U{}).
+    The first of these domains is the one of \textit{confidentiality}, i.e. each label states that a piece of information is either public (\P{}) or confidential (\C{}).
+    The second of these domains is the one of \textit{integrity}, i.e. each label states that a piece of information is either trusted (\T{}) or untrusted (\U{}) where \enquote{trusted} means whether
+    the values we deal with are integrous or in other words not malicious?
 
     \begin{figure}
         \centering
@@ -121,7 +119,7 @@ Intuitively speaking, information labelled with $ a \in M $ is allowed to flow t
         \label{fig:sec-lattice}
     \end{figure}
 
-    It can be seen in the diagram depicting the lattice of security labels (fig. \ref{fig:sec-lattice}) that public information is always allowed to flow to confidential sinks but not vice versa and that trusted information is always allowed to flow to untrusted sinks but not vice versa.
+    It can be seen in the diagram depicting the lattice of security labels (fig. \ref{fig:sec-lattice}) that public information can flow to confidential sinks but not vice versa and that trusted information can flow to untrusted sinks but not vice versa.
     Intuitively, this means that trusted parts of the architecture must only receive trusted data and that confidential data must be handled by confidential parts of the architecture only.
 \end{example}
 
@@ -134,6 +132,7 @@ SecVerilogBL enhances on this by tracking security labels not only per variable 
 Since information is not allowed to flow \enquote{down} in the lattice, downgrading can be understood best as a typecast that allows such behavior.
 In some \gls{hdl} programs, it might be necessary to allow for insecure flows of information (in regard to the information flow policy).
 In those cases, a programmer can use \lstinline[mathescape]{downgrade(e, $ \tau $)} to annotate the expression \lstinline{e} as being of type $ \tau $, regardless of any prior annotations.
+This effectively \textit{grades} the label of a bit of information \textit{down} such that information is not routed to a sink annotated with a label smaller than the information.
 
 In total, SecVerilogBL knows seven ways to express types:
 \begin{align*}
@@ -152,6 +151,8 @@ Types are of a certain kind:
 Any type is of kind $ l $.
 Furthermore, the type $ x \mapsto \tau $ is of kind $ \texttt{int} \rightarrow k $ where $ k $ is the kind of $ \tau $.
 However, when type-checking is performed, types of kind $ l $ are lifted to be of kind $ \texttt{int} \rightarrow l $ such that every type is a partial function from bit indices to information flow labels.
+This construct spares programmers from writing type maps for arrays and bit-vectors where the type does not change per bit.
+This way, a constant type $ \tau $ of kind $ l $ can be applied to a whole bit-vector as for type-checking, $ \tau $ is lifted to $ i \mapsto \tau $ which is of kind $ \texttt{int} \rightarrow l $.
 
 \begin{example}
     The following snippet shows the type annotation of parts of a register file definition in SecVerilogBL:
@@ -185,7 +186,7 @@ However, when type-checking is performed, types of kind $ l $ are lifted to be o
     If \lstinline{ns} in fact equals 1, furthermore, the register \lstinline{read} shall be written with \lstinline{mem[read_addr]} but only if the type of that also is of \lstinline{PU} which is checked by ensuring that \lstinline{reg_ns[read_addr]} also equals one.
     Since each element's type of \lstinline{mem} depends on \lstinline{reg_ns}, this assignment is safe since obviously, a variable annotated with type \lstinline{PU} can be written with a value of the same type.
 
-    If the check was omitted and \lstinline{ns == 1}, \lstinline{read} would be written with \lstinline{mem[read_addr]} when \lstinline{reg_ns[read_addr] == 0}, a variable of type \lstinline{PU} would be written with a value of type \lstinline{CT}.
+    If this check was omitted and \lstinline{ns == 1}, \lstinline{read} would be written with \lstinline{mem[read_addr]} when \lstinline{reg_ns[read_addr] == 0}, a variable of type \lstinline{PU} would be written with a value of type \lstinline{CT}.
     But since $ \CT \not \sqsubseteq \PU $, this would result in a type-checker error.
 \end{example}
 
@@ -321,7 +322,7 @@ To achieve this, it must be tackled how such an information flow policy as propo
 \subsection{RISC-Architectures}
 \label{sec:riscs}
 
-The book \citetitle{Patterson13} defines the term \gls{isa} as follows:
+\citetitle{Patterson13} defines the term \gls{isa} as follows:
 \begin{displaycquote}[p.22]{Patterson13}
     One of the most important abstractions \textins{in computer design} is the interface between the hardware and the lowest-level software.
     Because of its importance, it is given a special name: the instruction set architecture, or simply architecture, of a computer.
@@ -350,7 +351,7 @@ On the other hand, the ARM architecture is very feature-rich but not very much c
 The MIPS architecture strikes a middle-ground of these two extremes.
 
 The goal of this section is to illustrate the features and fundamental design concepts that come with contemporary \gls{risc} architectures.
-It was decided to focus on \gls{risc} architectures as a target of verification because their simpler approach to \glspl{isa} makes them far easier to analyze and model than \gls{cisc} processors.
+The decision towards focusing on \gls{risc} architectures as a target of verification was made because their simpler approach to \glspl{isa} makes them far easier to analyze and model than \gls{cisc} processors.
 Using a \gls{risc} architecture will allow for implementing an architecture in scope of this thesis while the results will still be applicable and comparable to real-world \glspl{isa} that are in use as of today.
 Although choosing a \gls{risc} architecture as a target of verification already facilitates an easier implementation of the this thesis' approach, verifying a complete architecture still might be out of scope to be verified as part of a master thesis.
 Introducing more than one \gls{risc} architectures will allow us to choose parts to exclude in the verification model without harming our results.
@@ -568,7 +569,7 @@ Addresses will be treated as physical ones throughout this thesis.
 \todo{Es ist anzunehmen, dass information flow zwischen den modes stattfindet; verifiziere nicht, ob das passiert, sondern wie man das verhindern könnte}
 \todo{privelege escalation vulnerabilities}
 
-Now that it has been ruled out to include sub-architectural hardware mechanisms or virtual memory in the model targeted for verification, the question still is open what \textit{will} be part of the model.
+Now that two concepts that touch most architectures have been ruled out, namely sub-architectural hardware mechanisms or virtual memory, this section will give a positive description of what \textit{will} be part of the model.
 This includes the question of the threat model of the higher level properties to be verified.
 
 A key feature of modern architectures that is used by modern \glspl{os} are different privileges levels.
@@ -608,7 +609,7 @@ Even if it could be assumed that the hardware your computer is running on accura
     Without going into details on this research, the approach of this thesis still is an important addition to this research as it is more general, i.e. implementation independent whereas hardware verification by its very nature is implementation dependent.
 }.
 
-\todo{rework}
+\todo{Give reference and reasoning}
 In this threat model, timing channels are excluded.
 
 \subsection{Model Checking}
@@ -623,7 +624,7 @@ It is one way to prove that a given system complies with a given specification.
 
     Model checking is a verification technique that explores all possible system states in a brute-force manner.
     Similar to a computer chess program that checks possible moves, a model checker, the software tool that performs the model checking, examines all possible system scenarios in a systematic manner.
-    Int his way, it can be shown that a given system model truly satisfies a certain property. \textelp{}
+    In this way, it can be shown that a given system model truly satisfies a certain property. \textelp{}
 
     Typical properties that can be checked using model checking are of a qualitative nature:
     Is the generated result OK?,
@@ -655,6 +656,12 @@ By translating the system into a model and the specification into a formal prope
     \caption{Overview on Model Checking}
     \label{fig:model-checking}
 \end{figure}
+
+It has already been mentioned in the introduction of both the thesis as a whole and this section that the model checker to be used in this thesis is nuXmv.
+The aim of this subsection is to introduce nuXmv and two other tools that were taken into consideration for this thesis.
+These other two model checkers are called SPIN and SPACER.
+By introducing three model checkers, we want to give a feel for all the different flavors of model checkers and be able to argue for why nuXmv was chosen over others.
+However, this section does not intend to perform an thorough analysis of contemporary model checkers.
 
 \subsubsection{SPIN}
 \label{sec:spin}
@@ -785,7 +792,7 @@ However, in some situations it might be perfectly fine for some of the processes
 Labeling parts of code as end-state contributes towards this.
 
 Never claims are processes themselves.
-\todo{introduce LTL}
+\todo{Forward reference to introduction of LTL}
 They run like any other process but must not terminate otherwise they're regarded as failure.
 This is the most complex way to express properties and in fact falls together with writing \gls{ltl} properties about a model.
 Therefore SPIN also allows to express such never properties in \gls{ltl} directly via their command line interface.
@@ -894,7 +901,7 @@ For the sake of brevity, these concepts will be introduced by example.
 Consider the program $ P $ as depicted in snippet \ref{snpt:spacer-p}.
 $ P $ performs an integer division with remainder for a natural number \lstinline{n} by a divisor \lstinline{div} storing the results in \lstinline{ratio} and \lstinline{mod}.
 Intuitively speaking, $ \hat{P} $ is an under-approximation (or abstraction) of $ P $ if for every part of $ P $ there is a corresponding part of $ \hat{P} $ whose effects are logically entailed by the original part.
-On the other hand, $ P $ is an over-approximation of $ \hat{P} $.
+Vice versa, $ P $ is an over-approximation of $ \hat{P} $.
 An example for an over-approximation of $ P $ in snippet \ref{snpt:over-p} and an example for an under-approximation of in snippet \ref{snpt:under-p}.
 For abstracting $ P $ to $ \hat{P} $ a couple of lines were removed whilst all other were left untouched.
 
@@ -979,7 +986,7 @@ A single predicate could be used to simulate the architectural state of the inst
 
 However, whereas the limiting factor for SPIN was the modelling language, the limiting factor for SPACER is the output of the tool.
 In case of a property failing to be verified, no counterexamples are given but SPACER simply outputs there is an trace of the program for which a given property does not hold but without specifying the trace itself.
-\muZ{} itself can be configured to give a more detailed result however that would still not include a \textit{trace of derivations}.
+\muZ{} itself can be configured to give a more detailed result however this would still not include a \textit{trace of derivations}.
 For SPACER or \muZ{} to be usable in the context of this thesis, these tools would need to output a log of variable values or steps taken when applying rules.
 
 \subsubsection{nuXmv}
@@ -995,12 +1002,12 @@ There are more syntactical constructs, e.g. macros or constants, but these do no
 A module in nuXmv induces a set of state transition systems.
 The state space of such a system is given by the variables of the module, i.e. an assignment to all variables is a state of the system.
 The initial state must model the \smv{INIT} constraints the transition relation must model the \smv{TRANS} constraints.
-Whenever nuXmv checks a property $ P $ for a module $ M $ it is checked if every state transition system $ S $ which is induced by $ M $ models $ P $.
+Whenever nuXmv checks a property $ P $ for a module $ M $ it is checked if every state transition system $ S $ which is given by $ M $ models $ P $.
 
 SMV is a strongly typed language.
 Variables can be of type boolean, integer range, a custom enumeration, bit-vectors or arrays in the case of finite state transition systems or additionally integers and reals which induce infinite state transition systems.
 \smv{INIT} constraints are simple formulas of propositional logic supporting standard expression to deal with bit-vectors, arrays, etc., such as basic arithmetic, array indexing, standard boolean operators on both bit-vector and boolean level, but also case and if-then-else expressions.
-\smv{TRANS} constraints also are forumlas of propositional logic but additionally support use of the \smv{next(...)} operator which references to the value in the next state of some expression.
+\smv{TRANS} constraints also are forumlas of propositional logic but additionally support use of the \smv{next(...)} operator which is a reference to the value of the respective expression in the next state.
 
 \begin{example}
     Consider the example module depicted in snippet \ref{snpt:nuxmv} modeling a pair of traffic lights; one for pedestrians crossing the street, the other for cars driving on the street.
@@ -1035,7 +1042,7 @@ Variables can be of type boolean, integer range, a custom enumeration, bit-vecto
     Input variables have the characteristic that they are \enquote{read-only}.
     Technically, every variable is read-only since they can not be assigned directly but only constrained.
     \smv{IVAR} variables, however, are \enquote{read-only} because they cannot be used in \smv{INIT} constraints or inside \smv{next(...)} expressions.
-    In other words, the transition of input variables is completely random.
+    In other words, the transition of input variables appears to be completely random as it is completely unconstrained and as such can take any value in any step.
     In this case, the input variable to the module signals whether a pedestrian just pressed the button indicating the desire to cross the road.
 
     Furthermore, the module comprises three ordinary variables: the boolean variable \smv{ped_waiting} which indicates whether a pedestrian is waiting to cross the road as well as \smv{traffic_lights} and \smv{ped_lights} modelling the traffic or pedestrian lights and both are of an enum type that contains the symbols \smv{r} for red and \smv{g} for green.
@@ -1096,12 +1103,12 @@ Furthermore, there are five main temporal operators.
     \item[Next] \lstinline[language=smv,mathescape=true]{$ \varphi := $ X p}: $ T $ models $ \varphi $ if \smv{p} is true in $ t_2 $.
     \item[Globally] \lstinline[language=smv,mathescape=true]{$ \varphi := $ G p}: $ T $ models $ \varphi $ if \smv{p} is true for \textit{all} $ t_i $, $ 1 \leq i $.
     \item[Finally] \lstinline[language=smv,mathescape=true]{$ \varphi := $ F p}: $ T $ models $ \varphi $ if \smv{p} is true for \textit{some} $ t_i $, $ 1 \leq i $.
-    \item[Until] \lstinline[language=smv,mathescape=true]{$ \varphi := $ p U p'}: $ T $ models $ \varphi $ if \smv{p} is true in $ t_1 $ to $ t_i $, $ 1 \leq i $ and at $ t_{i + 1} $, \smv{p'} is true.
-    \item[Releases] \lstinline[language=smv,mathescape=true]{$ \varphi := $ p V p'}: $ T $ models $ \varphi $ if \smv{p'} holds in $ t_1 $ to $ t_i $, $ 1 \leq i $ and in $ t_i $ also \smv{p} is true.
+    \item[Until] \lstinline[language=smv,mathescape=true]{$ \varphi := $ p U p'}: $ T $ models $ \varphi $ if \smv{p} is true in $ t_1 $ to $ t_i $, $ 1 \leq i $, and at $ t_{i + 1} $, \smv{p'} is true.
+    \item[Releases] \lstinline[language=smv,mathescape=true]{$ \varphi := $ p V p'}: $ T $ models $ \varphi $ if \smv{p'} holds in $ t_1 $ to $ t_i $, $ 1 \leq i $, and in $ t_i $ also \smv{p} is true.
     Alternatively, $ i $ might not be bounded, i.e. \smv{p} then is never and \smv{p'} globally true.
 \end{description}
 
-When an \gls{ltl} specification \smv{p} is checked by nuXmv, it is verified that \smv{p} is true for \textit{all} infinitely long execution paths.
+When an \gls{ltl} specification \smv{p} is checked by nuXmv, it is verified that \smv{p} is true for \textit{all} infinitely long execution paths of the transition system given by the main module.
 Consequently, an invariant \smv{p} can also be expressed as the \gls{ltl} formula \smv{G p}.
 
 Additionally, there are analogous operators for the past.
@@ -1112,7 +1119,7 @@ The \enquote{Historically} operator \smv{H p} is the counterpart to \smv{G} and 
 
 \gls{ctl} formulas share much of the idea of \gls{ltl} formulas but they differ in the interpretations and models for formulas.
 Whereas in \gls{ltl} an interpretation of a formula is a infinitely long execution path of a transition system, in \gls{ctl} an interpretation of a formula is a transition system itself or more specifically: the unwinded transition relation of a transition system as a tree (hence the name computation \textit{tree} logic).
-Therefore, it is straightforward how \gls{ctl} formulas are checked by nuXmv: it is checked whether all transition systems induced by the module model the formula.
+Therefore, it is straightforward how \gls{ctl} formulas are checked by nuXmv: it is checked whether the transition system unwinded as a tree for some fixed initial state models the formula.
 Again, the most simple form of a \gls{ctl} formula is a next-expression \smv{p}.
 To illustrate the models-relation for \gls{ctl}, consider the example tree depicted in figure \ref{fig:ctl-int}.
 Such a tree $ T $ models \smv{p} is \smv{p} is true in state $ x_0 $.
@@ -1180,16 +1187,26 @@ It can be seen that the most important \gls{ltl} operators \smv{X}, \smv{G} and 
     \end{lstlisting}
 
     Counter-examples in nuXmv always show a finite fraction of an infinite execution path.
-    Only one state being depicted here indicates that the computation tree with the initial state given above and in which no variable ever changes violates the \gls{ctl} formula at hand.
-    This tree illustrates a world in which the button for pedestrians is never pressed and in this world, the pedestrian lights will correctly never show green.
+    For \gls{ltl} formulas, this fraction loops at some point thus inducing an infinite trace.
+    For \gls{ctl} formulas on the other hand, the counter-example marks the longest, unambiguous path in the transition tree to a subtree that violates the formula at hand.
+    Only one state being depicted in the counter-example above indicates that the computation tree with the initial state given above and in which no variable ever changes violates the \gls{ctl} formula at hand.
+    This tree illustrates a world in which the button for pedestrians is never pressed and therefore, the pedestrian lights will correctly never show green.
 
     While it is not explicitly mentioned in the user manual how input variables relate to the states in the unwinding of the transition relation for the interpretation of a \gls{ctl} formula, it is assumed here that the input variables are not part of the state space; otherwise the counter example given above would not apply since the state where \smv{ped_button} becomes true trivially is reachable.
     This assumption is supported by the fact that in nuXmv, \gls{ctl} formulas must not reference input variables.
+    In other words, this means that one must not rely on input variables when verifying a system which is completely reasonable.
 \end{example}
 
 Whereas SPIN was problematic because its input language didn't match the needs of this thesis, and SPACER or \muZ{} were problematic because there output does not match the needs of this thesis, nuXmv delivers in both aspects.
 The traces generated as counter-examples serve as illustration what specifically went wrong on a property.
-The input language supports models that are very conservative in regard to the model of computation that is taken as a basis.
+\todo{Example with while-loop}
+The input language allows to implement modules that are limited in the description of the transition relation itself\footnote{%
+    Since transitions are constrained by propositional logic and expressions without loops only, there can be issues if complex transitions should be expressed.
+    For example, in section \ref{sec:ifc} we will consider a situation where for the transition of a bit vector the first bit that is high needs to be found.
+    In other programming languages, one would simply iterate over all bits of the vector and break the loop on the first high bit.
+    However, when constraining the transition relation, there are no loops.
+    This left us with the need to implement this search for the first high bit as a sequence of nested \smv{( ? : )} expressions resembling the binary search tree for the respective bit.
+} but is powerful in expressing modules as a whole.
 Having variables and transition allows to implement pretty much any sequential system.
 Therefore the decision was made to use nuXmv as a verification engine.
 
@@ -1206,9 +1223,7 @@ nuXmv supports a plethora of techniques to check specifications, e.g. the \citet
 In the practical work for this thesis, after the decision to implement the information flow control in \gls{ltl} has been made, a couple of these techniques which apply to \gls{ltl}-checking were tested out.
 In this informal evaluation it was found that the K-Liveness algorithm proposed in \cite{Claessen12} delivered best results and terminated quickly whenever the model met the specification.
 Whenever this was not the case, i.e. the specification was not met by the model which was usually indicated by a long runtime of the K-Liveness algorithm, a \gls{bmc} approach computed counter-examples very efficiently.
-
-The technique of \gls{bmc} has already been introduced in section \ref{sec:spacer}.
-Now, the key idea behind the K-Liveness algorithm by \citeauthor{Claessen12} shall be investigated.
+As the technique of \gls{bmc} has already been introduced in section \ref{sec:spacer}, now, the key idea behind the K-Liveness algorithm by \citeauthor{Claessen12} shall be investigated.
 
 In \gls{ltl} two types of properties can be distinguished: \textit{safety} and \textit{liveness} properties.
 Safety properties are formulas for which every counter example has finite length.
@@ -1218,6 +1233,7 @@ Liveness properties on the other hand can\footnote{%
 The background of the K-Liveness algorithm is that techniques for efficiently solving safety properties already exist, i.e. the IC3 algorithm proposed in \cite{Bradley11}.
 \citeauthor{Claessen12} take this algorithm and present a decision procedure for model checking liveness properties on finite state transition systems, i.e. a general algorithm for checking \gls{ltl} formulas on such systems.
 The algorithm works on \gls{ltl} formulas of the canonical form: \smv{F G q} where \smv{q} is some \gls{ltl} formula.
+The authors implicitly mention that any \gls{ltl} formula $ \varphi $ can be transformed into this form but give no proof or reference for this.
 For such properties, \citeauthor{Claessen12} present the following lemma:
 \begin{lemma}[\cite{Claessen12}]
     If a state transition system models \smv{F G q}, then there exists some integer $ k $ such that for any trace $ T $, \smv{q} is false at most $ k $ times in $ T $.
